--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <section class="bunner overlay">
         <div class="container">
         <h1 class="bunner-title">ЕФЕКТИВНІ РІЩЕННЯ ДЛЯ <br />ВАШОГО БІЗНЕСУ</h1>
-        <button type="button" class="button" data-modal-open>Замовити послугу</button>
+        <button type="button" class="btn button" data-modal-open>Замовити послугу</button>
       </div>
       </section>
       <section class="benefits">
@@ -227,7 +227,7 @@
           <label>
             <input type="email" name="email" class="your-mail" placeholder="E-mail"/>
           </label>
-        <button type="submit" class="button-footer">Підписатися <svg class="icon-send" width="24" height="24"><use href="./images/icons.svg#icon-send"></use></svg> </button>
+        <button type="submit" class="btn button-footer">Підписатися <svg class="icon-send" width="24" height="24"><use href="./images/icons.svg#icon-send"></use></svg> </button>
         </form>
       </div>
     </div>
@@ -273,7 +273,7 @@
             <input type="checkbox" name="mailing" id="mailing" class="modal-mailing-check hidden">
             <label for="mailing" class="modal-mailing-label">Погоджуюся з розсилкою та приймаю <a href="#" class="terms"> Умови договору</a></label>
           </div>
-          <button type="submit" class="modal-btn">Відправити</button>
+          <button type="submit" class="btn modal-btn">Відправити</button>
           </form>
        
     </div>
