--- a/portfolio.html
+++ b/portfolio.html
@@ -188,8 +188,8 @@
     <footer class="footer">
       <div class="container footer-container">
       <div class="first-colum">
-      <a class="logo-link" href="/index.html"
-        >Web<span class="logo-footer">Studio</span></a>
+      <a class="logo-link logo" href="/index.html"
+        >Web<span class="logo-footer logo">Studio</span></a>
       <address class="adress">
         <p class="footer-article">м. Київ, пр-т Лесі Українки, 26</p>
         <ul class="contact">
@@ -212,11 +212,13 @@
         <li class="our-soc-items"><a href="#" class="our-soc-link link"><svg class="our-social-icons" width="20" height="20"><use href="./images/icons.svg#icon-linkedin"></use></svg></a></li>
       </ul>
       </div>
-      <div class="third-column">
+      <div class="third-colum">
         <p  class="join">Підпишіться на розсилку</p>
         <form  class="join-mail" action=" ">
+          <label>
             <input type="email" name="email" class="your-mail" placeholder="E-mail"/>
-        <button type="submit" class="button-footer">Підписатися <svg class="icon-send" width="24" height="24"><use href="/images/icons.svg#icon-send"></use></svg> </button>
+          </label>
+        <button type="submit" class="btn button-footer">Підписатися <svg class="icon-send" width="24" height="24"><use href="./images/icons.svg#icon-send"></use></svg> </button>
         </form>
       </div>
     </div>
