--- a/index.html
+++ b/index.html
@@ -30,21 +30,21 @@
     <header class="navigation">
       <div class="container">
         <nav class="main-nav">
-          <a class="logo-link logo" href="/index.html">Web<span class="logo-header logo">Studio</span></a>
+          <a class="logo-link logo" href="/index.html">Web<span class="logo logo-header">Studio</span></a>
           <ul class="site-nav">
-            <li class="nav-unit first-unit"><a href="./index.html" class="link current-page">Студія</a></li>
-            <li class="nav-unit"><a href="./portfolio.html" class="link">Портфоліо</a></li>
-            <li class="nav-unit"><a href="#" class="link">Контакти</a></li>
+            <li class="site-nav__unit first-unit"><a href="./index.html" class="link site-nav__link current-page">Студія</a></li>
+            <li class="site-nav__unit"><a href="./portfolio.html" class="site-nav__link link">Портфоліо</a></li>
+            <li class="site-nav__unit"><a href="#" class="site-nav__link link">Контакти</a></li>
           </ul>
         </nav>
         <ul class="contact">
-          <li class="contact-unit">
-            <a href="mailto:info@devstudio.com" class="link link-mail"
+          <li class="contact__unit">
+            <a href="mailto:info@devstudio.com" class="link contact__mail"
               ><svg class="icon-envelope"><use href="./images/icons.svg#icon-envelope"></use></svg>info@devstudio.com</a
             >
           </li >
-          <li class="contact-unit">
-            <a href="tel:+380961111111" class="link link-tel"
+          <li class="contact__unit">
+            <a href="tel:+380961111111" class="link contact__tel"
               ><svg class="icon-tel"><use href="./images/icons.svg#icon-smartphone"></use></svg>+38 096 111 11 11</a
             >
           </li>
@@ -66,7 +66,7 @@
             <div class="benefit-item">
               <svg class="benefit-icon" width="70" height="70"><use href="./images/icons.svg#icon-antenna"></use></svg>
             </div>
-            <h3 class="title-benefits after-title">УВАГА ДО ДЕТАЛЕЙ</h3>
+            <h3 class="title-benefits after-title ">УВАГА ДО ДЕТАЛЕЙ</h3>
             <p class="article-benefits">
               Ідейні міркування, і навіть початок повсякденної роботи з
               формування позиції.
@@ -111,19 +111,19 @@
           <li class="work-item">
             <div class="image-box">
             <img src="./images/img1.jpg" width="370" alt="Десктопні додатки" />
-            <p class="label after-title">Десктопні додатки</p>
+            <p class="after-title label">Десктопні додатки</p>
           </div>
           </li>
           <li class="work-item">
             <div class="image-box">
             <img src="./images/img2.jpg" width="370" alt="Мобільні додатки" />
-            <p class="label after-title">Мобільні додатки</p>
+            <p class="after-title label">Мобільні додатки</p>
           </div>
           </li>
           <li class="work-item">
             <div class="image-box">
             <img src="./images/img3.jpg" width="370" alt="Дизайнерські рішення"/>
-            <p class="label after-title">Дизайнерські рішення</p>
+            <p class="label after-title ">Дизайнерські рішення</p>
           </div>
           </li>
         </ul>
@@ -132,64 +132,63 @@
     <section class="people section">
       <div class="container">
       <h2 class="section-title">Наша команда</h2>
-      <ul class="people-list">
-        <li class="people-items">
+      <ul class="people__list">
+        <li class="people__items">
           <img src="./images/igor.jpg" width="270" alt="Ігор Дем'яненко" />
-          <h3 class="section-people-h3 ">Ігор Дем'яненко</h3>
-          <p class="people-article">Product Designer</p>
-          <ul class="people-soc-list">
-            <li class="people-soc-items"><a href="#" class="people-soc-link link"><svg class="people-social-icons" width="20" height="20"><use href="./images/icons.svg#icon-instagram"></use></svg></a></li>
-            <li class="people-soc-items"><a href="#" class="people-soc-link link"><svg class="people-social-icons" width="20" height="20"><use href="./images/icons.svg#icon-twitter"></use></svg></a></li>
-            <li class="people-soc-items"><a href="#" class="people-soc-link link"><svg class="people-social-icons" width="20" height="20"><use href="./images/icons.svg#icon-facebook"></use></svg></a></li>
-            <li class="people-soc-items"><a href="#" class="people-soc-link link"><svg class="people-social-icons" width="20" height="20"><use href="./images/icons.svg#icon-linkedin"></use></svg></a></li>
+          <h3 class="people__name">Ігор Дем'яненко</h3>
+          <p class="people__profession">Product Designer</p>
+          <ul class="people-soc__list">
+            <li class="people-soc__items"><a href="#" class="people-soc__link"><svg class="people-social__icons" width="20" height="20"><use href="./images/icons.svg#icon-instagram"></use></svg></a></li>
+            <li class="people-soc__items"><a href="#" class="people-soc__link"><svg class="people-social__icons" width="20" height="20"><use href="./images/icons.svg#icon-twitter"></use></svg></a></li>
+            <li class="people-soc__items"><a href="#" class="people-soc__link"><svg class="people-social__icons" width="20" height="20"><use href="./images/icons.svg#icon-facebook"></use></svg></a></li>
+            <li class="people-soc__items"><a href="#" class="people-soc__link"><svg class="people-social__icons" width="20" height="20"><use href="./images/icons.svg#icon-linkedin"></use></svg></a></li>
           </ul>
         </li>
-        <li class="people-items">
+        <li class="people__items">
           <img src="./images/olga.jpg" width="270" alt="Ольга Рєпіна" />
-          <h3 class="section-people-h3">Ольга Рєпіна</h3>
-          <p class="people-article">Frontend Developer</p>
-          <ul class="people-soc-list">
-            <li class="people-soc-items"><a href="#" class="people-soc-link link"><svg class="people-social-icons" width="20" height="20"><use href="./images/icons.svg#icon-instagram"></use></svg></a></li>
-            <li class="people-soc-items"><a href="#" class="people-soc-link link"><svg class="people-social-icons" width="20" height="20"><use href="./images/icons.svg#icon-twitter"></use></svg></a></li>
-            <li class="people-soc-items"><a href="#" class="people-soc-link link"><svg class="people-social-icons" width="20" height="20"><use href="./images/icons.svg#icon-facebook"></use></svg></a></li>
-            <li class="people-soc-items"><a href="#" class="people-soc-link link"><svg class="people-social-icons" width="20" height="20"><use href="./images/icons.svg#icon-linkedin"></use></svg></a></li>
+          <h3 class="people__name">Ольга Рєпіна</h3>
+          <p class="people__profession">Frontend Developer</p>
+          <ul class="people-soc__list">
+            <li class="people-soc__items"><a href="#" class="people-soc__link"><svg class="people-social__icons" width="20" height="20"><use href="./images/icons.svg#icon-instagram"></use></svg></a></li>
+            <li class="people-soc__items"><a href="#" class="people-soc__link"><svg class="people-social__icons" width="20" height="20"><use href="./images/icons.svg#icon-twitter"></use></svg></a></li>
+            <li class="people-soc__items"><a href="#" class="people-soc__link"><svg class="people-social__icons" width="20" height="20"><use href="./images/icons.svg#icon-facebook"></use></svg></a></li>
+            <li class="people-soc__items"><a href="#" class="people-soc__link"><svg class="people-social__icons" width="20" height="20"><use href="./images/icons.svg#icon-linkedin"></use></svg></a></li>
           </ul>
         </li>
-        <li class="people-items">
+        <li class="people__items">
           <img src="./images/nick.jpg" width="270" alt="Микола Тарасов" />
-          <h3 class="section-people-h3">Микола Тарасов</h3>
-          <p class="people-article">Marketing</p>
-          <ul class="people-soc-list">
-            <li class="people-soc-items"><a href="#" class="people-soc-link link"><svg class="people-social-icons" width="20" height="20"><use href="./images/icons.svg#icon-instagram"></use></svg></a></li>
-            <li class="people-soc-items"><a href="#" class="people-soc-link link"><svg class="people-social-icons" width="20" height="20"><use href="./images/icons.svg#icon-twitter"></use></svg></a></li>
-            <li class="people-soc-items"><a href="#" class="people-soc-link link"><svg class="people-social-icons" width="20" height="20"><use href="./images/icons.svg#icon-facebook"></use></svg></a></li>
-            <li class="people-soc-items"><a href="#" class="people-soc-link link"><svg class="people-social-icons" width="20" height="20"><use href="./images/icons.svg#icon-linkedin"></use></svg></a></li>
+          <h3 class="people__name">Микола Тарасов</h3>
+          <p class="people__profession">Marketing</p>
+          <ul class="people-soc__list">
+            <li class="people-soc__items"><a href="#" class="people-soc__link"><svg class="people-social__icons" width="20" height="20"><use href="./images/icons.svg#icon-instagram"></use></svg></a></li>
+            <li class="people-soc__items"><a href="#" class="people-soc__link"><svg class="people-social__icons" width="20" height="20"><use href="./images/icons.svg#icon-twitter"></use></svg></a></li>
+            <li class="people-soc__items"><a href="#" class="people-soc__link"><svg class="people-social__icons" width="20" height="20"><use href="./images/icons.svg#icon-facebook"></use></svg></a></li>
+            <li class="people-soc__items"><a href="#" class="people-soc__link"><svg class="people-social__icons" width="20" height="20"><use href="./images/icons.svg#icon-linkedin"></use></svg></a></li>
           </ul>
         </li>
-        <li class="people-items">
+        <li class="people__items">
           <img src="./images/mikhail.jpg" width="270" alt="Михайло Єрмаков" />
-          <h3 class="section-people-h3">Михайло Єрмаков</h3>
-          <p class="people-article">UI Designer</p>
-          <ul class="people-soc-list">
-            <li class="people-soc-items"><a href="#" class="people-soc-link link"><svg class="people-social-icons" width="20" height="20"><use href="./images/icons.svg#icon-instagram"></use></svg></a></li>
-            <li class="people-soc-items"><a href="#" class="people-soc-link link"><svg class="people-social-icons" width="20" height="20"><use href="./images/icons.svg#icon-twitter"></use></svg></a></li>
-            <li class="people-soc-items"><a href="#" class="people-soc-link link"><svg class="people-social-icons" width="20" height="20"><use href="./images/icons.svg#icon-facebook"></use></svg></a></li>
-            <li class="people-soc-items"><a href="#" class="people-soc-link link"><svg class="people-social-icons" width="20" height="20"><use href="./images/icons.svg#icon-linkedin"></use></svg></a></li>
+          <h3 class="people__name">Михайло Єрмаков</h3>
+          <p class="people__profession">UI Designer</p>
+          <ul class="people-soc__list">
+            <li class="people-soc__items"><a href="#" class="people-soc__link"><svg class="people-social__icons" width="20" height="20"><use href="./images/icons.svg#icon-instagram"></use></svg></a></li>
+            <li class="people-soc__items"><a href="#" class="people-soc__link"><svg class="people-social__icons" width="20" height="20"><use href="./images/icons.svg#icon-twitter"></use></svg></a></li>
+            <li class="people-soc__items"><a href="#" class="people-soc__link"><svg class="people-social__icons" width="20" height="20"><use href="./images/icons.svg#icon-facebook"></use></svg></a></li>
+            <li class="people-soc__items"><a href="#" class="people-soc__link"><svg class="people-social__icons" width="20" height="20"><use href="./images/icons.svg#icon-linkedin"></use></svg></a></li>
           </ul>
         </li>
-      </ul>
     </div>
     </section>
     <section class="clients section">
       <div class="container">
      <h2 class="section-title">Постійні клієнти</h2>
-     <ul class="clients-list">
-      <li class="clients-items"><a href="#" class="clients-link"><svg class="clients-icons" ><use href="./images/icons.svg#icon-client1"></use></svg></a></li>
-      <li class="clients-items"><a href="#" class="clients-link"><svg class="clients-icons"><use href="./images/icons.svg#icon-client2"></use></svg></a></li>
-      <li class="clients-items"><a href="#" class="clients-link"><svg class="clients-icons"><use href="./images/icons.svg#icon-client3"></use></svg></a></li>
-      <li class="clients-items"><a href="#" class="clients-link"><svg class="clients-icons"><use href="./images/icons.svg#icon-client4"></use></svg></a></li>
-      <li class="clients-items"><a href="#" class="clients-link"><svg class="clients-icons"><use href="./images/icons.svg#icon-client5"></use></svg></a></li>
-      <li class="clients-items"><a href="#" class="clients-link"><svg class="clients-icons"><use href="./images/icons.svg#icon-client6"></use></svg></a></li>
+     <ul class="clients__list">
+      <li class="clients__items"><a href="#" class="clients__link"><svg class="clients__icons" ><use href="./images/icons.svg#icon-client1"></use></svg></a></li>
+      <li class="clients__items"><a href="#" class="clients__link"><svg class="clients__icons"><use href="./images/icons.svg#icon-client2"></use></svg></a></li>
+      <li class="clients__items"><a href="#" class="clients__link"><svg class="clients__icons"><use href="./images/icons.svg#icon-client3"></use></svg></a></li>
+      <li class="clients__items"><a href="#" class="clients__link"><svg class="clients__icons"><use href="./images/icons.svg#icon-client4"></use></svg></a></li>
+      <li class="clients__items"><a href="#" class="clients__link"><svg class="clients__icons"><use href="./images/icons.svg#icon-client5"></use></svg></a></li>
+      <li class="clients__items"><a href="#" class="clients__link"><svg class="clients__icons"><use href="./images/icons.svg#icon-client6"></use></svg></a></li>
      </ul>
     </div>
     </section>
@@ -201,24 +200,24 @@
         >Web<span class="logo-footer logo">Studio</span></a>
       <address class="adress">
         <p class="footer-article">м. Київ, пр-т Лесі Українки, 26</p>
-        <ul class="contact">
-          <li class="mail">
-            <a href="mailto:info@devstudio.com" class="link"
+        <ul class="footer__contact">
+          <li class="footer__mail">
+            <a href="mailto:info@devstudio.com" class="footer__link link"
               >info@devstudio.com</a>
           </li>
-          <li class="phone">
-            <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+          <li class="footer__phone">
+            <a href="tel:+380961111111" class="footer__link link">+38 096 111 11 11</a>
           </li>
         </ul>
       </address>
     </div>
     <div class="second-colum">
       <p class="join">ПРИЄДНУЙТЕСЬ</p>
-      <ul class="our-soc-list">
-        <li class="our-soc-items"><a href="#" class="our-soc-link link"><svg class="our-social-icons" width="20" height="20"><use href="./images/icons.svg#icon-instagram"></use></svg></a></li>
-        <li class="our-soc-items"><a href="#" class="our-soc-link link"><svg class="our-social-icons" width="20" height="20"><use href="./images/icons.svg#icon-twitter"></use></svg></a></li>
-        <li class="our-soc-items"><a href="#" class="our-soc-link link"><svg class="our-social-icons" width="20" height="20"><use href="./images/icons.svg#icon-facebook"></use></svg></a></li>
-        <li class="our-soc-items"><a href="#" class="our-soc-link link"><svg class="our-social-icons" width="20" height="20"><use href="./images/icons.svg#icon-linkedin"></use></svg></a></li>
+      <ul class="our-soc__list">
+        <li class="our-soc__items"><a href="#" class="our-soc__link link"><svg class="our-social-icons" width="20" height="20"><use href="./images/icons.svg#icon-instagram"></use></svg></a></li>
+        <li class="our-soc__items"><a href="#" class="our-soc__link link"><svg class="our-social-icons" width="20" height="20"><use href="./images/icons.svg#icon-twitter"></use></svg></a></li>
+        <li class="our-soc__items"><a href="#" class="our-soc__link link"><svg class="our-social-icons" width="20" height="20"><use href="./images/icons.svg#icon-facebook"></use></svg></a></li>
+        <li class="our-soc__items"><a href="#" class="our-soc__link link"><svg class="our-social-icons" width="20" height="20"><use href="./images/icons.svg#icon-linkedin"></use></svg></a></li>
       </ul>
       </div>
       <div class="third-colum">
@@ -232,6 +231,8 @@
       </div>
     </div>
     </footer>
+
+    
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
       <button data-modal-close class="btn-close"><svg class="icon-close" width="11" height="11"><use href="./images/icons.svg#icon-close"></use></svg></button>
