--- a/portfolio.html
+++ b/portfolio.html
@@ -21,40 +21,40 @@
     <title>Document</title>
 </head>
 <body>
-  <header class="navigation portfolio-navigation">
-    <div class="container">
-      <nav class="main-nav">
-        <a class="logo-link" href="/index.html">Web<span class="logo-header">Studio</span></a>
-        <ul class="site-nav">
-          <li class="nav-unit first-unit"><a href="./index.html" class="link">Студія</a></li>
-          <li class="nav-unit"><a href="./portfolio.html" class="link current-page">Портфоліо</a></li>
-          <li class="nav-unit"><a href="#" class="link">Контакти</a></li>
+  <header class="navigation underline">
+      <div class="container">
+        <nav class="main-nav">
+          <a class="logo-link logo" href="/index.html">Web<span class="logo logo-header">Studio</span></a>
+          <ul class="site-nav">
+            <li class="site-nav__unit first-unit"><a href="./index.html" class="link site-nav__link">Студія</a></li>
+            <li class="site-nav__unit"><a href="./portfolio.html" class="site-nav__link link current-page">Портфоліо</a></li>
+            <li class="site-nav__unit"><a href="#" class="site-nav__link link">Контакти</a></li>
+          </ul>
+        </nav>
+        <ul class="contact">
+          <li class="contact__unit">
+            <a href="mailto:info@devstudio.com" class="link contact__mail"
+              ><svg class="icon-envelope"><use href="./images/icons.svg#icon-envelope"></use></svg>info@devstudio.com</a
+            >
+          </li >
+          <li class="contact__unit">
+            <a href="tel:+380961111111" class="link contact__tel"
+              ><svg class="icon-tel"><use href="./images/icons.svg#icon-smartphone"></use></svg>+38 096 111 11 11</a
+            >
+          </li>
         </ul>
-      </nav>
-      <ul class="contact">
-        <li class="contact-unit">
-          <a href="mailto:info@devstudio.com" class="link link-mail"
-            ><svg class="icon-envelope"><use href="./images/icons.svg#icon-envelope"></use></svg>info@devstudio.com</a
-          >
-        </li >
-        <li class="contact-unit">
-          <a href="tel:+380961111111" class="link link-tel"
-            ><svg class="icon-tel"><use href="./images/icons.svg#icon-smartphone"></use></svg>+38 096 111 11 11</a
-          >
-        </li>
-      </ul>
-    </div>
-  </header>
+      </div>
+    </header>
     <main>
         <section class="portfolio section">
             <div class="container">
             <h2 class="hidden">Портфоліо</h2>
-        <ul class="portfolio-button">
-            <li class="item"><button type="button" class="button active-button">Усі</button></li>
-            <li class="item"><button type="button" class="button">Веб-сайти</button></li>
-            <li class="item"><button type="button" class="button">Додатки</button></li>
-            <li class="item"><button type="button" class="button">Дизайн</button></li>
-            <li class="item"><button type="button" class="button">Маркетинг</button></li>
+        <ul class="sorting">
+            <li class="sorting__item"><button type="button" class="sorting__button active-button">Усі</button></li>
+            <li class="sorting__item"><button type="button" class="sorting__button">Веб-сайти</button></li>
+            <li class="sorting__item"><button type="button" class="sorting__button">Додатки</button></li>
+            <li class="sorting__item"><button type="button" class="sorting__button">Дизайн</button></li>
+            <li class="sorting__item"><button type="button" class="sorting__button">Маркетинг</button></li>
         </ul>
         <ul class="projects">
             <li class="item">
@@ -192,24 +192,24 @@
         >Web<span class="logo-footer logo">Studio</span></a>
       <address class="adress">
         <p class="footer-article">м. Київ, пр-т Лесі Українки, 26</p>
-        <ul class="contact">
-          <li class="mail">
-            <a href="mailto:info@devstudio.com" class="link"
+        <ul class="footer__contact">
+          <li class="footer__mail">
+            <a href="mailto:info@devstudio.com" class="footer__link link"
               >info@devstudio.com</a>
           </li>
-          <li class="phone">
-            <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+          <li class="footer__phone">
+            <a href="tel:+380961111111" class="footer__link link">+38 096 111 11 11</a>
           </li>
         </ul>
       </address>
     </div>
     <div class="second-colum">
       <p class="join">ПРИЄДНУЙТЕСЬ</p>
-      <ul class="our-soc-list">
-        <li class="our-soc-items"><a href="#" class="our-soc-link link"><svg class="our-social-icons" width="20" height="20"><use href="./images/icons.svg#icon-instagram"></use></svg></a></li>
-        <li class="our-soc-items"><a href="#" class="our-soc-link link"><svg class="our-social-icons" width="20" height="20"><use href="./images/icons.svg#icon-twitter"></use></svg></a></li>
-        <li class="our-soc-items"><a href="#" class="our-soc-link link"><svg class="our-social-icons" width="20" height="20"><use href="./images/icons.svg#icon-facebook"></use></svg></a></li>
-        <li class="our-soc-items"><a href="#" class="our-soc-link link"><svg class="our-social-icons" width="20" height="20"><use href="./images/icons.svg#icon-linkedin"></use></svg></a></li>
+      <ul class="our-soc__list">
+        <li class="our-soc__items"><a href="#" class="our-soc__link link"><svg class="our-social-icons" width="20" height="20"><use href="./images/icons.svg#icon-instagram"></use></svg></a></li>
+        <li class="our-soc__items"><a href="#" class="our-soc__link link"><svg class="our-social-icons" width="20" height="20"><use href="./images/icons.svg#icon-twitter"></use></svg></a></li>
+        <li class="our-soc__items"><a href="#" class="our-soc__link link"><svg class="our-social-icons" width="20" height="20"><use href="./images/icons.svg#icon-facebook"></use></svg></a></li>
+        <li class="our-soc__items"><a href="#" class="our-soc__link link"><svg class="our-social-icons" width="20" height="20"><use href="./images/icons.svg#icon-linkedin"></use></svg></a></li>
       </ul>
       </div>
       <div class="third-colum">
