--- a/index.html
+++ b/index.html
@@ -112,19 +112,19 @@
             <div class="image-box">
             <img src="./images/img1.jpg" width="370" alt="Десктопні додатки" />
             <p class="after-title label">Десктопні додатки</p>
-          </div>
+            </div>
           </li>
           <li class="work-item">
             <div class="image-box">
             <img src="./images/img2.jpg" width="370" alt="Мобільні додатки" />
             <p class="after-title label">Мобільні додатки</p>
-          </div>
+            </div>
           </li>
           <li class="work-item">
             <div class="image-box">
             <img src="./images/img3.jpg" width="370" alt="Дизайнерські рішення"/>
             <p class="label after-title ">Дизайнерські рішення</p>
-          </div>
+            </div>
           </li>
         </ul>
       </div>
@@ -177,6 +177,7 @@
             <li class="people-soc__items"><a href="#" class="people-soc__link"><svg class="people-social__icons" width="20" height="20"><use href="./images/icons.svg#icon-linkedin"></use></svg></a></li>
           </ul>
         </li>
+      </ul>  
     </div>
     </section>
     <section class="clients section">
@@ -222,7 +223,7 @@
       </div>
       <div class="third-colum">
         <p  class="join">Підпишіться на розсилку</p>
-        <form  class="join-mail" action=" ">
+        <form  class="join-mail" action="URL">
           <label>
             <input type="email" name="email" class="your-mail" placeholder="E-mail"/>
           </label>
@@ -239,12 +240,12 @@
           <p class="modal-title">Залиште свої дані, ми вам передзвонимо</p>
           <form class="modal-form">
             <div class="modal-input-group">
-              <label for="name" class="modal-label">Ім'я</label> <div class="modal-input-wrapper">
-                <div class="modal-input-wrapper">
-            <input type="text" class="modal-input" placeholder=" " name="name" required>
-            <svg class="icon-modal" height="18" width="18"><use href="./images/icons.svg#icon-person"></use></svg>
+              <label for="name" class="modal-label">Ім'я</label> 
+              <div class="modal-input-wrapper">
+               <input type="text" class="modal-input" placeholder=" " name="name" required>
+               <svg class="icon-modal" height="18" width="18"><use href="./images/icons.svg#icon-person"></use></svg>
+              </div>
             </div>
-          </div>
             <div class="modal-input-group">
               <label for="tel"  class="modal-label">Телефон</label>
               <div class="modal-input-wrapper">
@@ -252,16 +253,16 @@
               title="+380631111111" value="" 
               name="tel" pattern="[\+]\d{3}\s[(]d{2}[\)]\s\d{3}[\]\d{2}[\]\d{2}" required>
               <svg class="icon-modal" height="18" width="18"><use href="./images/icons.svg#icon-phone"></use></svg>
+              </div>
             </div>
-          </div>
 
             <div class="modal-input-group">
               <label for="mail"  class="modal-label">Пошта</label>
               <div class="modal-input-wrapper">
               <input type="email" class="modal-input" name="mail" id="mail" placeholder=" ">
               <svg class="icon-modal" height="18" width="18"><use href="./images/icons.svg#icon-email"></use></svg>
-            </div>   
-          </div>    
+              </div>   
+            </div>    
 
           <div class="modal-input-group">
             <label for="comment" class="modal-label">Коментар</label>
@@ -275,7 +276,7 @@
             <label for="mailing" class="modal-mailing-label">Погоджуюся з розсилкою та приймаю <a href="#" class="terms"> Умови договору</a></label>
           </div>
           <button type="submit" class="btn modal-btn">Відправити</button>
-          </form>
+      </form>
        
     </div>
     </div>
